@@ -1345,6 +1345,126 @@ operator|)
 return|;
 block|}
 specifier|public
+name|int
+name|processFile
+parameter_list|(
+name|String
+name|fileName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|FileReader
+name|fileReader
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fileReader
+operator|=
+operator|new
+name|FileReader
+argument_list|(
+name|fileName
+argument_list|)
+expr_stmt|;
+return|return
+name|processReader
+argument_list|(
+operator|new
+name|BufferedReader
+argument_list|(
+name|fileReader
+argument_list|)
+argument_list|)
+return|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|fileReader
+operator|!=
+literal|null
+condition|)
+block|{
+name|fileReader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+specifier|public
+name|void
+name|processInitFiles
+parameter_list|(
+name|CliSessionState
+name|ss
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|boolean
+name|saveSilent
+init|=
+name|ss
+operator|.
+name|getIsSilent
+argument_list|()
+decl_stmt|;
+name|ss
+operator|.
+name|setIsSilent
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|initFile
+range|:
+name|ss
+operator|.
+name|initFiles
+control|)
+block|{
+name|int
+name|rc
+init|=
+name|processFile
+argument_list|(
+name|initFile
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rc
+operator|!=
+literal|0
+condition|)
+block|{
+name|System
+operator|.
+name|exit
+argument_list|(
+name|rc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|ss
+operator|.
+name|setIsSilent
+argument_list|(
+name|saveSilent
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
 specifier|static
 name|void
 name|main
@@ -1631,6 +1751,14 @@ operator|new
 name|CliDriver
 argument_list|()
 decl_stmt|;
+comment|// Execute -i init files (always in silent mode)
+name|cli
+operator|.
+name|processInitFiles
+argument_list|(
+name|ss
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|ss
@@ -1672,19 +1800,11 @@ name|exit
 argument_list|(
 name|cli
 operator|.
-name|processReader
-argument_list|(
-operator|new
-name|BufferedReader
-argument_list|(
-operator|new
-name|FileReader
+name|processFile
 argument_list|(
 name|ss
 operator|.
 name|fileName
-argument_list|)
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
