@@ -23,6 +23,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Properties
 import|;
 end_import
@@ -89,6 +109,21 @@ name|cmdProperties
 init|=
 operator|new
 name|Properties
+argument_list|()
+decl_stmt|;
+comment|/**    * -i option if any that the session has been invoked with.    */
+specifier|public
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|initFiles
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
 argument_list|()
 decl_stmt|;
 specifier|public
