@@ -3474,6 +3474,33 @@ operator|new
 name|CliDriver
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|tname
+operator|.
+name|equals
+argument_list|(
+literal|"init_file.q"
+argument_list|)
+condition|)
+block|{
+name|ss
+operator|.
+name|initFiles
+operator|.
+name|add
+argument_list|(
+literal|"../data/scripts/test_init_file.sql"
+argument_list|)
+expr_stmt|;
+block|}
+name|cliDriver
+operator|.
+name|processInitFiles
+argument_list|(
+name|ss
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 name|int
